--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="container" ng-controller="PayGapController">
 
         <div class="hed">San Francisco women receive unequal pay</div>
-        <div class="chatter">No matter how you parse the data, accounting for education and profession, the most recent Census shows that women are consistently paid less for the same work, particularly when they are well-educated or work in high paying jobs.</div>
+        <div class="chatter">No matter how you parse the data, accounting for education and profession, the most recent Census shows that women are consistently paid less, particularly when they are well-educated or work in high paying industries.</div>
 
         <div class="button-container">
           <div class="button edu"
